tests/semantica/invalid/return/test2.ctds
program
	{
		integer foo(){
			return true;
		}

		void main(){
			
		}
	}